--- a/styles.css
+++ b/styles.css
@@ -31,10 +31,11 @@ p {
 span {
 	font-size: 20px;
 	width: 150px;
-	border: 2px solid black;
+	border-left: 2px solid black;
+	border-bottom: 2px solid black;
 	font-weight: bold;
 	text-align: center;
-	float: right; top :0; right: 0; margin: 0;
+	float: right; top :0; right: 0px; margin: 0;
 	position: absolute;
 }
 #menu1 {
@@ -80,7 +81,7 @@ span {
 /* Cell phone view */
 @media (max-width: 767px)  {
   
-  .col-sx-12 {
+  .col-xs-12 {
   	float: left;
     width: 100%;
   }
