--- a/module2-solution/styles.css
+++ b/module2-solution/styles.css
@@ -5,7 +5,7 @@
 
 h1 {
 	font-size: 27px;
-	font-family: Georgia serif;
+	font-family: Arial, Helvetica, sans-serif;
 	text-align: center;
 	color: rgb(0, 0, 0);
 	margin-bottom: 30px;
@@ -13,7 +13,7 @@ h1 {
 
 p {
 	padding: 15px 5px 0px 5px;
-	font-family: Georgia sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 16px;
 	position: relative;
 }
