--- a/module2-solution/styles.css
+++ b/module2-solution/styles.css
@@ -29,12 +29,14 @@ p {
  }
 
 span {
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 20px;
 	width: 150px;
-	border: 2px solid black;
+	border-left: 2px solid black;
+	border-bottom: 2px solid black;
 	font-weight: bold;
 	text-align: center;
-	float: right; top :0; right: 0; margin: 0;
+	float: right; top :0; right: 0px; margin: 0;
 	position: absolute;
 }
 #menu1 {
@@ -80,7 +82,7 @@ span {
 /* Cell phone view */
 @media (max-width: 767px)  {
   
-  .col-sx-12 {
+  .col-xs-12 {
   	float: left;
     width: 100%;
   }
